<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btns_input_fragment"
        android:orientation="horizontal">
        <Button
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:textSize="12dp"
            android:layout_height="wrap_content"
            android:text="@string/income_input_btn"
            android:id="@+id/input_income_btn"/>
        <Button
            android:layout_marginLeft="30dp"
            android:textSize="12dp"
            android:text="@string/expense_input_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/input_expense_btn"/>
        <Button
            android:layout_marginRight="10dp"
            android:layout_marginLeft="30dp"
            android:textSize="12dp"
            android:text="@string/transfer_input_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/input_transfer_btn"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="80dp"
        android:id="@+id/date_input_ll"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/date_input_textView"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="Date"
            android:textSize="20dp"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"/>
        <TextView
            android:id="@+id/date_input_editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:textSize="20dp"
            android:text="01/01/2000"
            android:paddingLeft="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/acc_input_ll"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginTop="140dp">

        <TextView
            android:id="@+id/acc_input_textView"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="Account"
            android:textSize="20dp"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"/>

        <Spinner
            android:id="@+id/account_dropdown"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:spinnerMode="dropdown"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/category_input_ll"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginTop="200dp">
        <TextView
            android:id="@+id/category_input_textView"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="Category"
            android:textSize="20dp"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"/>
        <Spinner
            android:id="@+id/category_dropdown"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:spinnerMode="dropdown"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/amount_input_ll"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginTop="260dp">
        <TextView
            android:id="@+id/amount_input_textView"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="Amount"
            android:textSize="20dp"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"/>
        <EditText
            android:id="@+id/amount_input_editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/note_input_ll"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginTop="320dp">
        <TextView
            android:id="@+id/note_input_textView"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="Note"
            android:textSize="20dp"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"/>
        <EditText
            android:id="@+id/note_input_editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/save_btn"
            android:text="@string/save_btn"/>
        <Button
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/continue_btn"
            android:text="@string/continue_btn"/>


    </LinearLayout>


</FrameLayout>